--- a/report-service/build.gradle
+++ b/report-service/build.gradle
@@ -13,8 +13,20 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'mysql:mysql-connector-java:8.0.30'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
+	compileOnly("org.projectlombok:lombok:1.18.24")
+	annotationProcessor('org.projectlombok:lombok:1.18.24')
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'io.netty', name: 'netty-resolver-dns-native-macos', classifier: 'osx-aarch_64'
+	implementation 'io.jsonwebtoken:jjwt:0.2'
+	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 }
 
 tasks.named('test') {
