chore: finish all models exc. extra details

--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
     # sesuaikan nama database anda dengan di bawah ini
     url: jdbc:mysql://localhost:3306/ipms?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Jakarta
 
     # sesuaikan dengan NAMA dan PASSWORD anda dengan username password di bawah ini
-    username: ipms
-    password: rRzELLrI09jVKyFamG0P
+    username: mysql
+    password: mysql
 
   jpa:
     properties:
