chore: initialize dummy data and rename employee path

--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -16,9 +16,13 @@ spring:
         format_sql: true
 
     # pembuatan database (create || create-drop || validate || update)
-    hibernate.ddl-auto: create
+    hibernate.ddl-auto: update
 
     show-sql: true
+
+  sql:
+    init:
+      mode: always
 
   main:
     allow-circular-references: true
