--- a/auth-service/src/main/resources/application-dev.yml
+++ b/auth-service/src/main/resources/application-dev.yml
@@ -6,8 +6,8 @@ spring:
     url: jdbc:mysql://localhost:3306/ipms?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Jakarta
 
     # sesuaikan dengan NAMA dan PASSWORD anda dengan username password di bawah ini
-    username: ipms
-    password: rRzELLrI09jVKyFamG0P
+    username: mysql
+    password: mysql
 
   jpa:
     properties:
