--- a/report-service/src/main/resources/application-dev.yml
+++ b/report-service/src/main/resources/application-dev.yml
@@ -6,23 +6,23 @@ spring:
     url: jdbc:mysql://localhost:3306/ipms?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Jakarta
 
     # sesuaikan dengan NAMA dan PASSWORD anda dengan username password di bawah ini
-    username: mysql
-    password: mysql
+    username: ipms
+    password: rRzELLrI09jVKyFamG0P
 
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         format_sql: true
 
     # pembuatan database (create || create-drop || validate || update)
-    hibernate.ddl-auto: create
+    hibernate.ddl-auto: update
 
     show-sql: true
 
-#  sql:
-#    init:
-#      mode: always
+  sql:
+    init:
+      mode: always
 
   main:
     allow-circular-references: true
