chore(frontend-service): create basic layout

--- a/frontend-service/tsconfig.json
+++ b/frontend-service/tsconfig.json
@@ -16,10 +16,10 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@components": ["components/*"],
-      "@hooks": ["utils/hooks/*"],
-      "@functions": ["utils/functions/*"],
-      "@types": ["utils/types/*"]
+      "@components/*": ["./components/*"],
+      "@hooks/*": ["utils/hooks/*"],
+      "@functions/*": ["utils/functions/*"],
+      "@types/*": ["utils/types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
