feat(auth): create auth mechanism for frontend

--- a/frontend-service/tsconfig.json
+++ b/frontend-service/tsconfig.json
@@ -19,7 +19,10 @@
       "@components/*": ["./components/*"],
       "@hooks/*": ["utils/hooks/*"],
       "@functions/*": ["utils/functions/*"],
-      "@types/*": ["utils/types/*"]
+      "@type/*": ["utils/types/*"],
+      "@contexts/*": ["utils/contexts/*"],
+      "@models/*": ["utils/models/*"],
+      "@constants/*":["utils/constants/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
