--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -20,6 +20,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.7",
     "react-hot-toast": "^2.4.0",
     "typescript": "4.9.5"
   },
@@ -27,6 +28,8 @@
     "@types/js-cookie": "^3.0.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "tailwindcss": "^3.2.7"
   }
 }
