--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -12,13 +12,16 @@
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
+    "@types/react-big-calendar": "^1.6.1",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-big-calendar": "^1.6.8",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.7",
     "react-hot-toast": "^2.4.0",
