--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.15",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -26,7 +29,9 @@
     "react-hook-form": "^7.43.7",
     "react-hot-toast": "^2.4.0",
     "react-select": "^5.7.1",
-    "typescript": "4.9.5"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "typescript": "4.9.5",
+    "use-react-router-breadcrumbs": "^4.0.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
