--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -26,15 +26,18 @@
     "react": "18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.7",
     "react-hot-toast": "^2.4.0",
     "react-select": "^5.7.1",
+    "react-signature-canvas": "^1.0.6",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.5",
     "use-react-router-breadcrumbs": "^4.0.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
+    "@types/react-signature-canvas": "^1.0.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
