--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -20,7 +20,9 @@
     "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
