--- a/employee-service/src/main/resources/application-prod.yml
+++ b/employee-service/src/main/resources/application-prod.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
     # sesuaikan nama database anda dengan di bawah ini
-    url: jdbc:mysql://localhost:3306/ipms?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Jakarta
+    url: jdbc:mysql://db:3306/ipms?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Jakarta
 
     # sesuaikan dengan NAMA dan PASSWORD anda dengan username password di bawah ini
-    username: ipms-db
+    username: ipms
     password: rRzELLrI09jVKyFamG0P
 
   jpa:
@@ -17,8 +17,6 @@ spring:
 
     # pembuatan database (create || create-drop || validate || update)
     hibernate.ddl-auto: update
-
-    show-sql: true
 
   main:
     allow-circular-references: true
