--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,9 +11,19 @@ http {
     sendfile        on;
 
     keepalive_timeout  65;
+    
+    server {
+      listen 80;
+      return 301 https://$host$request_uri;
+    }
 
     server {
-	    listen 80;
+      listen 443 ssl;
+
+      ssl_certificate /certificates/fullchain.pem;
+      ssl_certificate_key /certificates/privkey.pem;
+      ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+      ssl_ciphers HIGH:!aNULL:!MD5;
       
       location / {
         proxy_set_header X-Real-IP $remote_addr;
