--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,9 +8,10 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    sendfile        on;
+    sendfile on;
 
-    keepalive_timeout  65;
+    keepalive_timeout 65;
+    client_max_body_size 10M;
     
     server {
       listen 80;
