--- a/dashboard-service/src/main/resources/application-prod.yml
+++ b/dashboard-service/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
     # sesuaikan nama database anda dengan di bawah ini
-    url: jdbc:mysql://localhost:3306/ipms?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Jakarta
+    url: jdbc:mysql://db:3306/ipms?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Jakarta
 
     # sesuaikan dengan NAMA dan PASSWORD anda dengan username password di bawah ini
     username: ipms
@@ -17,12 +17,6 @@ spring:
 
     # pembuatan database (create || create-drop || validate || update)
     hibernate.ddl-auto: update
-
-    show-sql: true
-
-  # sql:
-  #   init:
-  #     mode: always
 
   main:
     allow-circular-references: true
