--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.15",
     "@next/font": "13.1.6",
+    "@react-pdf/renderer": "^3.1.9",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-big-calendar": "^1.6.1",
