add api for pest, low stock, complaint trend

--- a/dashboard-service/src/main/resources/application-dev.yml
+++ b/dashboard-service/src/main/resources/application-dev.yml
@@ -18,11 +18,11 @@ spring:
     # pembuatan database (create || create-drop || validate || update)
     hibernate.ddl-auto: update
 
-    show-sql: true
+#    show-sql: true
 
-  sql:
-    init:
-      mode: always
+#  sql:
+#    init:
+#      mode: always
 
   main:
     allow-circular-references: true
